fix: unify copyright to '© 2026 Uncle J'

--- a/index-en.html
+++ b/index-en.html
@@ -408,7 +408,7 @@
             <a href="privacy-en.html">Privacy Policy</a>
             <a href="terms-en.html">Terms of Service</a>
         </nav>
-        <p class="copyright">© 2026 One Page</p>
+        <p class="copyright">© 2026 Uncle J</p>
     </footer>
 </body>
 </html>
