--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <a href="privacy.html">隐私政策</a>
             <a href="terms.html">服务条款</a>
         </nav>
-        <p class="copyright">© 2026 一页</p>
+        <p class="copyright">© 2026 Uncle J</p>
     </footer>
 </body>
 </html>
