--- a/terms-en.html
+++ b/terms-en.html
@@ -225,7 +225,7 @@
             <a href="support-en.html">Support</a>
             <a href="privacy-en.html">Privacy Policy</a>
         </nav>
-        <p class="copyright">© 2026 One Page</p>
+        <p class="copyright">© 2026 Uncle J</p>
     </footer>
 </body>
 </html>
