--- a/terms.html
+++ b/terms.html
@@ -225,7 +225,7 @@
             <a href="support.html">支持</a>
             <a href="privacy.html">隐私政策</a>
         </nav>
-        <p class="copyright">© 2026 一页</p>
+        <p class="copyright">© 2026 Uncle J</p>
     </footer>
 </body>
 </html>
