--- a/privacy-en.html
+++ b/privacy-en.html
@@ -276,7 +276,7 @@
             <a href="support-en.html">Support</a>
             <a href="terms-en.html">Terms of Service</a>
         </nav>
-        <p class="copyright">© 2026 One Page</p>
+        <p class="copyright">© 2026 Uncle J</p>
     </footer>
 </body>
 </html>
