--- a/privacy.html
+++ b/privacy.html
@@ -276,7 +276,7 @@
             <a href="support.html">支持</a>
             <a href="terms.html">服务条款</a>
         </nav>
-        <p class="copyright">© 2026 一页</p>
+        <p class="copyright">© 2026 Uncle J</p>
     </footer>
 </body>
 </html>
