content: use Mao quote as example card

--- a/index-en.html
+++ b/index-en.html
@@ -304,8 +304,8 @@
             Close.
         </p>
         <div class="card-preview">
-            <p class="quote">"If you plan, you stand.<br>If you don't, you fall."</p>
-            <p class="source">— Book of Rites</p>
+            <p class="quote">"No investigation,<br>no right to speak."</p>
+            <p class="source">—"Oppose Book Worship"</p>
         </div>
     </section>
 
