--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
             然后关掉
         </p>
         <div class="card-preview">
-            <p class="quote">「凡事预则立，<br>不预则废。」</p>
-            <p class="source">——《礼记·中庸》</p>
+            <p class="quote">「没有调查，<br>没有发言权。」</p>
+            <p class="source">——《反对本本主义》</p>
         </div>
     </section>
 
