Update ToS pricing wording

--- a/terms-en.html
+++ b/terms-en.html
@@ -170,11 +170,7 @@
 
         <p class="section-title">3. Purchases and Payment</p>
         <p>One Page offers a one-time purchase option to unlock all card content. Purchases are processed through the Apple App Store and are subject to Apple's terms of service.</p>
-        <p>Pricing:</p>
-        <ul>
-            <li>United States: $1.99</li>
-            <li>Other regions: Equivalent local currency</li>
-        </ul>
+        <p>Pricing is shown in the App Store and may vary by region, taxes, and currency.</p>
         <p>After purchase, you will have permanent access to the purchased content.</p>
 
         <p class="section-title">4. Refund Policy</p>
