--- a/terms.html
+++ b/terms.html
@@ -170,11 +170,7 @@
 
         <p class="section-title">3. 购买与付款</p>
         <p>一页提供一次性购买选项，解锁全部卡片内容。购买通过 Apple App Store 处理，受 Apple 的服务条款约束。</p>
-        <p>价格：</p>
-        <ul>
-            <li>中国区：¥12</li>
-            <li>其他地区：$1.99（或等值当地货币）</li>
-        </ul>
+        <p>价格以 App Store 显示为准，可能因地区、税费等因素有所不同。</p>
         <p>购买后，您将永久获得已购内容的访问权限。</p>
 
         <p class="section-title">4. 退款政策</p>
